[gd_scene load_steps=12 format=3 uid="uid://dqbl0chygmhxs"]

[ext_resource type="Texture2D" uid="uid://cfw1loq3vbj78" path="res://sprites/welcome_page/bg.png" id="1_4ddr3"]
[ext_resource type="Script" path="res://userinput.gd" id="1_gggf0"]
[ext_resource type="Texture2D" uid="uid://wrvcb3hcp7jb" path="res://sprites/welcome_page/masukButton.png" id="3_1hqf5"]
[ext_resource type="Texture2D" uid="uid://cbn8vt4r3d50a" path="res://sprites/input.png" id="3_f4rms"]
[ext_resource type="FontFile" uid="uid://gxjq17nikddv" path="res://font/Terfens W01 Bold.ttf" id="4_oy2ex"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lnfed"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_su0ag"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ol7fj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vqjoy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_64knc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j8w4l"]

[node name="active_scene" type="Node"]
script = ExtResource("1_gggf0")

[node name="bg" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_4ddr3")

[node name="Input" type="Sprite2D" parent="."]
position = Vector2(652, 294)
texture = ExtResource("3_f4rms")

[node name="uNameInput" type="TextEdit" parent="."]
offset_left = 655.0
offset_top = 247.0
offset_right = 946.0
offset_bottom = 303.0
theme_override_colors/search_result_border_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("4_oy2ex")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_lnfed")
theme_override_styles/focus = SubResource("StyleBoxEmpty_su0ag")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_ol7fj")
placeholder_text = "Nama"

[node name="kelasInput" type="TextEdit" parent="."]
offset_left = 656.0
offset_top = 347.0
offset_right = 949.0
offset_bottom = 405.0
theme_override_fonts/font = ExtResource("4_oy2ex")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_vqjoy")
theme_override_styles/focus = SubResource("StyleBoxEmpty_64knc")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_j8w4l")
placeholder_text = "Kelas"

[node name="playButton" type="TextureButton" parent="."]
offset_left = 465.0
offset_top = 552.0
offset_right = 825.0
offset_bottom = 723.0
texture_normal = ExtResource("3_1hqf5")

[connection signal="text_changed" from="uNameInput" to="." method="_on_text_update"]
[connection signal="text_changed" from="kelasInput" to="." method="_on_text_update"]
